feat: enhance tool capability definitions and add new memory store methods